2005-10-07 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Work on configuration dialogs
        * Make droptarget-sticky function working
        * Start implementing expert-mode
        * (Re-)implement clipboard-autopaste function

2005-10-06 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Make commandline option --showDropTarget working

2005-09-17 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Konqueror integration implementation.
        Note: Konqueror freezes at download start if integration is enabled.
        But I think it's more a Konqueror than a KGet problem. I hope I'll find a solution.

2005-09-10 Dario Massarin <nekkar@libero.it>
        * Now a TransferHandler object is created always bt the TransferFactory.
        This allows to easily reimplement the TransferHandler class, just by
        creating your own class and returning it when the createTransferHandler()
        function gets called.
        * More work on the BTTransferHandler class.
        * The transfer plugins can now provide its details widget that is 
        displayed automatically at the bottom of the TransferDetails widget.
        * Implementation of a first bittorrent details widget. 
        * Note that the bittorrent plugin currently has some problems related 
        to threads. It seems that Qt4 is quite different from Qt3 in these regards.

2005-09-08 Dario Massarin <nekkar@libero.it>
        * Start to implement properly the detailsWidgets for each transfer.
        Now we have a basic widget available with all the plugins and the 
        next step is to add at the bottom of it another widget provided
        by each plugin's factory with the createTransferDetails() function.
        * Start to implement a BTTransferHandler class, reimplementation 
        of the generic TransferHandler class.

2005-09-02 Urs Wolfer <u.wolfer @ bluewin.ch>
        * *Replace the old droptarget icon with the nuvola one

2005-08-31 Urs Wolfer <u.wolfer @ bluewin.ch>